# cpp-cmake-template

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/pch/: app_pch.hpp
app/res/: app_res.hpp.in
app/src/: main.cpp
core/: CMakeLists.txt  u_core.cpp
core/include/core/: core.hpp
core/src/: core.cpp
